@@ -5,6 +5,7 @@
     * Allow setting the DM overrive values in the connection string to SQLDriverConnect
       for example
       "DRIVER={Easysoft ODBC-SQL Server};Server=myserver;UID=user;PWD=pass;DMStmtAttr=SQL_QUERY_TIMEOUT=10;"
+    * Error and info message order was being inverted by the driver manager
 
 20th-April-2010
 2.3.0
